--- a/views/about/bio.handlebars
+++ b/views/about/bio.handlebars
@@ -1,4 +1,53 @@
 <div class="content">
+  <h4>about sam</h4>
+  <div class="text">
+    <div class="about-text">
+<ul>hi 👋</ul>
+    <ul>if you are looking here, you likely are a student or potential employer of
+    mine! welcome! </ul>
+    
+    <ul>this website operates more like a more-or-less-specific resume, but half the links are inconsistent whether they link to the actual project or to a blog about the project.</ul>
+    <ul>you can always <a href="mailto:samanthaheckle@gmail.com">ask me!</a> i will intermittantly update this site when i'm feeling particularly motivated, mayhaps during summers when i don't teach.</ul>
+    <ul>
+    basically me:
+    <ul>✧ coder</ul> 
+    <ul>✧ teacher</ul> 
+    <ul>✧ researcher</ul> 
+    <ul>✧ critic</ul> 
+    <ul>✧ gamer</ul> 
+    <ul>✧ cat lover</ul> 
+    </ul>
+    <ul>
+    basically links:
+    <ul>✧ <a href="https://github.com/samheckle">github</a></ul> 
+    <ul>✧ <a href="https://www.linkedin.com/in/samheckle/">linkedin</a></ul> 
+    <ul>✧ <a href="https://twitter.com/samheckle">twitter</a></ul> 
+    <ul>✧ <a href="https://www.instagram.com/corpus_of_god/">instagram</a></ul> 
+    </ul>
+    <ul>
+    places i am:
+    <ul>✧ New York City, NY (2021-)</ul> 
+    <ul>✧ New York University</ul> 
+    <ul>✧ School of Visual Arts</ul> 
+    </ul>
+    <ul>
+    places i have been:
+    <ul>✧ The New School</ul> 
+    <ul>✧ The Washington Post</ul> 
+    <ul>✧ Seattle, WA (2018-2021)</ul> 
+    <ul>✧ The Walt Disney Company</ul> 
+    <ul>✧ Microsoft</ul>
+    <ul>✧ Rochester, NY (2015-2018)</ul>
+    <ul>✧ Rochester Institute of Technology</ul>
+    <ul>✧ Berkeley, CA (1997-2015)</ul>
+    </ul>
+    </div>
+    
+    <div class="prof-pic">
+      <img src="assets/website.jpg" style="width: 200px;" />
+      <p>this is what i look like 👆</p>
 
-
+      <p>this is my cat saffron 👇</p><img src="assets/saffron.JPG" style="width: 200px;" />
+    </div>
+  </div>
 </div>
