--- a/views/about/bio.handlebars
+++ b/views/about/bio.handlebars
@@ -1,6 +1,6 @@
 <div class="content">
   <h4>about sam</h4>
-  <div class="text">
+  <div class="bio text">
     <div class="about-text">
 <ul>hi 👋</ul>
     <ul>if you are looking here, you likely are a student or potential employer of
