--- a/views/about/bio.handlebars
+++ b/views/about/bio.handlebars
@@ -29,6 +29,7 @@
     <ul>✧ New York City, NY (2021-)</ul> 
     <ul>✧ New York University</ul> 
     <ul>✧ School of Visual Arts</ul> 
+    <ul>✧ CUNY Hunter College</ul> 
     </ul>
     <ul>
     places i have been:
